# spinter

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main-graph.rs  main.rs
src/debugger/: debugger.rs  debugger_state.rs  messages.rs  mod.rs  models.rs  utils.rs
src/emulator/abstractions/: addressable.rs  circuit.rs  component.rs  machine.rs  mod.rs  pin.rs  pin_builder.rs  pins.rs  port.rs  tickable.rs
src/emulator/components/: hm62256b.rs  mod.rs  nand.rs  oscilator.rs  w24512a.rs
src/emulator/cpus/: mod.rs
src/emulator/cpus/mos6502/: mod.rs  opcodes_def.rs  opcodes_impl.rs  operand.rs  steppers.rs
src/emulator/cpus/w65c02/: mod.rs  pins.rs  state.rs  w65c02.rs
src/machines/: ben_eater.rs  mod.rs  simplified_c64.rs
tests/: add.asm  all-opcodes.asm
