[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
corosensei = "0.1.4"
crossbeam-channel = "0.5.8"
gametime = "0.2.0"
lazy_static = "1.4.0"
num = "0.4.1"
petgraph = "0.6.4"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
